# max-result-prefix-notation

./: .gitignore  README.rst  pyproject.toml
max_result_prefix_notation/: __init__.py
max_result_prefix_notation/utils/: common_utils.py
tests/: test_max_result_prefix_notation.py
