[tool.poetry]
name = "max-result-prefix-notation"
version = "0.1.0"
description = ""
authors = ["Vincitore1402"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.5b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
